--- a/workspace/app/templates/go.html
+++ b/workspace/app/templates/go.html
@@ -2,9 +2,8 @@
 {% block title %}Results{% endblock %}
 
 {% block message %}
-    <hr />
-    <h4 class="text-center">MESSAGE</h4>
-    <p class="text-center"><i>{{query}}</i></p>
+    <h3 class="text-center">MESSAGE</h3>
+    <p class="text-center" style="font-size: 18px"><i>{{query}}</i></p>
 {% endblock %}
 
 {% block content %}
