--- a/workspace/app/static/css/styles.css
+++ b/workspace/app/static/css/styles.css
@@ -2,6 +2,10 @@ body {
     font-family: sans-serif, Arial,  Helvetica;
 }
 
+.navbar {
+    margin: 0px;
+}
+
 .navbar-brand {
     color: white;
 }
@@ -13,6 +17,7 @@ body {
 
 .navbar-nav li a {
     color: white;
+    border-bottom: 1px solid transparent;
 }
 
 .navbar-nav li a:hover {
@@ -22,11 +27,10 @@ body {
 }
 
 
-
 .jumbotron {
     /* padding-top: 100px ; */
-    padding-top: 10%;
-    padding-bottom: 10%;
+    padding-top: 0px;
+    padding-bottom: 10%; 
     background-image: url('../images/background5.jpg') ;
     background-repeat: no-repeat; 
     /* height: 100%; */
@@ -35,12 +39,16 @@ body {
     -o-background-size: cover;
     background-size: cover;
     color: white;
-    margin-bottom: 0px;
+    margin-bottom: 40px;
 }
 
 .jumbotron h1 {
     font-weight: 300;
     text-shadow: 3px 2px black;
+}
+
+.jumbotron > .container {
+    padding-top: 5%;
 }
 
 #button-div {
@@ -53,6 +61,7 @@ body {
     background-color: #F45B69;
     font-size: 18px;
     border: 0;
+    border-radius: 10px;
 }
 
 .button:hover {
@@ -62,5 +71,68 @@ body {
 }
 
 input {
+    margin-top: 40px;
+}
+
+input:focus {
     outline: none ;
 }
+
+.display-classes {
+    display: flex;
+    width: 1200px;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-around;
+   
+}
+
+.box-classified {
+    background-color: #083D77;
+    padding: 10px;
+    margin: 20px;
+    color: white;
+    /* width: 200px;
+    height: 100px; */
+    flex-wrap: wrap;
+    font-size: 24px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 10px;
+    /* display: block; */
+}
+
+.box-not-classified {
+    border: 1px solid lightgrey;
+    padding: 10px;
+    margin: 20px;
+    /* width: 100px;
+    height: 70px; */
+    flex-wrap: wrap;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 14px;
+    border-radius: 10px;
+    /* display: block; */
+}
+
+.description-div {
+
+    width: 60%;
+}
+
+.text-description {
+    font-weight: 300;
+    margin-top: 40px;
+    font-size: 20px;
+}
+
+footer {
+    width: 100%;
+    background-color: rgb(252, 252, 252);
+    padding: 100px;
+}
+
+
