--- a/workspace/app/templates/master.html
+++ b/workspace/app/templates/master.html
@@ -18,26 +18,28 @@
 
 <body>
 
-<nav class="navbar navbar-trans navbar-fixed-top">
-    <div class="container">
-        <div class="navbar-header">
-            <a class="navbar-brand" href="/">Disaster Response Project</a>
-        </div>
-        <div id="navbar" class="collapse navbar-collapse">
-            <ul class="nav navbar-nav">
-                <li><a href="https://www.udacity.com/">Made with Udacity</a></li>
-                <li><a href="https://github.com/">Contact</a></li>
-            </ul>
-        </div>
-    </div>
-</nav>
+
 
 
 <div class="jumbotron">
+
+        <nav class="navbar navbar-transparent fixed-top">
+                <div class="container">
+                    <div class="navbar-header">
+                        <a class="navbar-brand" href="/">Disaster Response Project</a>
+                    </div>
+                    <div id="navbar" class="collapse navbar-collapse">
+                        <ul class="nav navbar-nav">
+                            <li><a href="https://www.udacity.com/">Made with Udacity</a></li>
+                            <li><a href="https://github.com/">Contact</a></li>
+                        </ul>
+                    </div>
+                </div>
+            </nav>
+
     <div class="container">
-        <h1 class="text-center link-red">Disaster Response Project</h1>
-        <p class="text-center">- Analyzing message data for disaster response -</p>
-        <hr />
+        <h1 class="text-center">Disaster Response Project</h1>
+        <p class="text-center" style="font-weight: 300;">- Analyzing message data for disaster response -</p>
       
         <div class="row">
             <div class="col-lg-2"></div>
@@ -66,11 +68,30 @@
         {% endblock %}
 </div>
 
+
 <div class="container">
     {% block content %}
-        <div class="page-header">
+    <div class="container description-div">
+   
+            <h1 class="text-center ">Project description</h1>
+            <p class="text-description">
+                This project is focusing on building a solution and model to help classify text messages related 
+                to and following real-world disaster scenarios. Typically after a larger disaster thousands or
+                even millions of messages are being send out. This is also the time when the disaster response organisations
+                have the least capacity to filter and handle the messages that are the most important as well
+                as relevant for those specific organisations. 
+            </p>
+            <p class="text-description">
+                The data that we are working with 
+                are within the genres: direct, news or social media messages and comes from several 
+                different disasters and has been labeled and captured by Figure Eight. 
+            </p>
+            
+    </div>
+
+    <div class="page-header">
             <h1 class="text-center">Overview of Training Dataset</h1>
-        </div>
+    </div>
     {% endblock %}
 
     {% for id in ids %}
@@ -78,12 +99,20 @@
     {% endfor %}
 </div>
 
+<footer>
+    <div class="container">
+            <p class="text-center" style="font-size: 24px; font-weight: 300;">Created by: <i>The Crazy Hippo</i></p>
+    </div>
+</footer>
+
 <script type="text/javascript">
-    const graphs = {{graphJSON | safe}};
-    const ids = {{ids | safe}};
+    const graphs = {{graphJSON | safe}}
+    const ids = {{ids | safe}}
+
     for(let i in graphs) {
         Plotly.plot(ids[i], graphs[i].data, graphs[i].layout);
     }
+    
 </script>
 
 </body>
