--- a/workspace/app/templates/go.html
+++ b/workspace/app/templates/go.html
@@ -9,7 +9,7 @@
 {% block content %}
     <div>
             <div>
-                <h1 class="text-center" style="color: grey;">Result</h1>
+                <h3 class="text-center" style="color: grey;">RESULT</h3>
             </div>
             <div class="display-classes">
                 {% for category, classification in classification_result.items() %}
@@ -23,3 +23,6 @@
     </div>
 
 {% endblock %}
+{% block datapoints %}
+{% endblock %}
+
