--- a/workspace/app/templates/master.html
+++ b/workspace/app/templates/master.html
@@ -80,7 +80,7 @@
                 In the case of a larger disaster thousands or even millions of messages are sent out 
                 in the form of social media messages, direct messages and news messages from 
                 different sources. Unfortunatly it is also at this time the disaster response organisations
-                have the least capacity to filter, handle and acto on these messages. 
+                have the least capacity to filter, handle and take action on these messages. 
                 <br><br>
                 With the use of machine learning technology we can build a solution to 
                 classify text messages automatically. This could help to 
